<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:paddingTop="10dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:text="@string/location_label"
        android:id="@+id/location_label"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/location_section"
        android:layout_below="@id/location_label">
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:hint="@string/location_hint"
            android:id="@+id/location_entry"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="17sp"
            android:text="@string/location_extension_txt"
            android:id="@+id/location_extension"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/distance_section"
        android:layout_below="@id/location_section"
        android:layout_marginTop="20dp"

        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="13sp"
            android:text="@string/distance_label"
            android:id="@+id/distance_label"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="200"
            android:id="@+id/distance_entry"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/distance_section"
        android:id="@+id/mode_toggles">
        <ToggleButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textOn="@string/tube"
            android:textOff="@string/tube"
            android:checked="true"
            android:id="@+id/tube_t_button"/>
        <ToggleButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textOn="@string/bus"
            android:textOff="@string/bus"
            android:checked="true"
            android:id="@+id/bus_t_button"/>
        <ToggleButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textOn="@string/bike"
            android:textOff="@string/bike"
            android:checked="true"
            android:id="@+id/bike_t_button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/buttons_section"
        android:layout_below="@+id/mode_toggles"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/find_txt"
            android:id="@+id/find_button"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/send_section">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/send_location_text"
                android:id="@+id/send_location_button"
                android:background="@color/colorAccent"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/send_meeting_text"
                android:id="@+id/send_meeting_button"
                android:background="@color/colorAccent"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            android:text="@string/friend_txt"
            android:id="@+id/friends_button"/>
        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/view_map_txt"
            android:id="@+id/view_map_button"/>
    </LinearLayout>



</RelativeLayout>
