<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context="a15071894.coursework1.Activities.FriendsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_friend_section"
        android:layout_marginTop="20dp">
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/your_name_hint"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:id="@+id/sender_name_entry"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone_hint"
            android:id="@+id/friend_number_entry"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_request_txt"
        android:layout_marginTop="20dp"
        android:id="@+id/request_friend_button"
        android:background="@color/colorAccent"
        android:layout_below="@id/add_friend_section"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:paddingTop="20dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/accepted_friends"
        android:layout_below="@id/request_friend_button"
        android:id="@+id/accepted_friend_title"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:id="@+id/accepted_friends_list"
        android:layout_margin="15dp"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/accepted_friend_title"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">
    </ListView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/pending_requests"
        android:layout_below="@id/accepted_friends_list"
        android:id="@+id/pending_friends_title"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:id="@+id/pending_friends_list"
        android:layout_margin="15dp"
        android:background="@color/colorAccent"
        android:layout_below="@+id/pending_friends_title"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">
    </ListView>

</RelativeLayout>